[workspace]
members = [
    "programs/counter/anchor",
    "programs/counter/native",
    "programs/counter/pinocchio"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
panic = "abort"

[workspace.dependencies]
solana-program = "1.18"
anchor-lang = "0.30.1"
pinocchio = "0.11.2"