[workspace]
members = [
    "programs/counter/anchor",
    "programs/counter/native",
    "programs/counter/pinocchio",
    "programs/account-data/native",
    "programs/account-data/anchor",
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
panic = "abort"

[workspace.dependencies]
solana-program = "1.18"
anchor-lang = "0.30.1"
pinocchio = "0.11.2"
borsh = { version = "1.5.1", features = ["derive"] }